[tool.poetry]
name = "k8s-certs-generator"
version = "0.1.0"
description = "k8s certs generator"
authors = ["superwongo <1069291377@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.11"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
default = true